name:           uAgda
version:        1.2.0.4
category:       Dependent Types
synopsis:       A simplistic dependently-typed language with parametricity.
description:

        uAgda implements an experimental dependently-typed language
        (and proof assistant by the Curry-Howard isomorphism), extended with support for parametricity.
        .
        See the share/tutorial directory for how to get started.
   
license:        OtherLicense
-- Creative Commons Attribution Share-Alike
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.8
tested-with:    GHC==6.12.3
build-type:     Simple

data-files:
     tutorial/00-Start-Here.ua
     tutorial/01-Module.ua
     tutorial/02-Holes.ua
     tutorial/03-Parametricity.ua
     tutorial/03.1-Parametricity-Use.ua
     tutorial/03.2-Nested-Parametricity.ua


executable uAgda
  extensions: CPP, FlexibleInstances, OverloadedStrings
  main-is: Main.hs

  other-modules:
     Cubes
     Permutation
     AbsSynToTerm
     Basics
     Display
     Main
     Normal
     Options
     RawSyntax
     Terms
     TypeCheckerNF

  build-depends: base
  build-depends: array
  build-depends: cmdargs
  build-depends: containers
  build-depends: pretty
  build-depends: parsec
  build-depends: BNFC-meta
  build-depends: transformers
  build-depends: mtl
  build-depends: split
  
